cloudcasts/modules/vpc/main.tf
resource "aws_vpc" "vpc" {
  cidr_block = var.vpc_cidr
  tags = {
    Name = "cloudcasts-${var.infra_env}-vpc"
    Project = "cloudcasts.io"
    Environment = var.infra_env
    ManagedBy = "terraform"
  }
}

resource "aws_subnet" "public" {
  for_each = var.public_subnet_numbers

  cidr_block = cidrsubnet(aws_vpc.vpc.cidr_block, 4, each.value )
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "cloudcasts-${var.infra_env}-public-subnet"
    Project = "cloudcasts.io"
    Role = "public"
    Environment = var.infra_env
    ManagedBy = "terraform"
    Subnet = "${each.key}-${each.value}"
  }
}
resource "aws_subnet" "private" {
  for_each = var.private_subnet_numbers

  cidr_block = cidrsubnet(aws_vpc.vpc.cidr_block, 4, each.value )
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "cloudcasts-${var.infra_env}-private-subnet"
    Project = "cloudcasts.io"
    Role = "private"
    Environment = var.infra_env
    ManagedBy = "terraform"
    Subnet = "${each.key}-${each.value}"
  }
}
