cloudcasts/modules/vpc/security.tf
resource "aws_security_group" "public" {
  name = "cloudcasts-${var.infra_env}-public-sg"
  description = "Public internet access"
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "cloudcasts-${var.infra_env}-public-sg"
    Role = "public"
    Project = "cloudcasts.io"
    Environment = var.infra_env
    ManagedBy = "terraform"
  }
}

resource "aws_security_group_rule" "public_out" {
  type = "egress"
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = [
    "0.0.0.0/0"]
  security_group_id = aws_security_group.public.id
}

resource "aws_security_group_rule" "public_in_ssh" {
  type = "ingress"
  from_port = 22
  to_port = 22
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.public.id
}

resource "aws_security_group_rule" "public_in_http" {
  type = "ingress"
  from_port = 80
  to_port = 80
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.public.id
}

resource "aws_security_group_rule" "public_in_https" {
  type = "ingress"
  from_port = 443
  to_port = 443
  protocol = "tcp"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.public.id
}


#
# Private Security Groups
#

resource "aws_security_group" "private" {
  name = "cloudcasts-${var.infra_env}-private-sg"
  description = "Provate internet access"
  vpc_id = aws_vpc.vpc.id

  tags = {
    Name = "cloudcasts-${var.infra_env}-private-sg"
    Role = "private"
    Project = "cloudcasts.io"
    Environment = var.infra_env
    ManagedBy = "terraform"
  }
}

resource "aws_security_group_rule" "private_out" {
  type = "egress"
  from_port = 0
  to_port = 0
  protocol = "-1"
  cidr_blocks = ["0.0.0.0/0"]
  security_group_id = aws_security_group.private.id
}

resource "aws_security_group_rule" "private_in" {
  type = "ingress"
  from_port = 0
  to_port = 65535
  protocol = "-1"
  cidr_blocks = [aws_vpc.vpc.cidr_block]
  security_group_id = aws_security_group.private.id
}
